# leptonica

./: CMakeLists.txt
Lepto-depends/: .gitignore  Readme.txt  build.proj  leptonica_depends.sln
Lepto-depends/giflib/: giflib.vcxproj
Lepto-depends/libjpeg/: jpeg.vcxproj
Lepto-depends/libpng/: libpng.vcxproj
Lepto-depends/libtiff/libtiff/: libtiff.vcxproj
Lepto-depends/zlib/: zlibstat.vcxproj
cmake/templates/: LeptonicaConfigInstall.cmake.in
src/: CMakeLists.txt
